modified intro and work

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>HI!👋🏽 I'm Joseph</h1>
-								<p>I am a front-end developer passionate about intrinsic web designs.I am proficient in web technologies to create interactive and highly responsive websites.</p>
+								<h1>HI!👋🏽 I'm Joey</h1>
+								<p>I am a front-end developer passionate about intrinsic web designs.</p>
+								
 								
 							</div>
 						</div>
@@ -47,16 +48,17 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<p>I am a technically sound web developer who conceptualizes ideas and delivers creative web applications to meet client specifications. I am proficient in web technologies to create interactive and highly responsive websites. By the way, check out my <a href="#work">awesome work</a>.</p>
+								<p>My passion is to work with extremely talented people where we exchange our knowledge, experience, and techniques to strike a perfect balance between clean code and complex design. I enjoy creating web applications for any immediate problems or projects I want to pursue.</p>
 							</article>
 
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<p>Most of my personal project always come from a problem I want to solve, and it is by solving that problem that I grow and develop my coding abilities.For example, I spotted a gap in the online presence of one of my local ISPs and I created a <!-- link goes here-->static website for the company.</p>
+								<p>I always break down the problem into smaller pieces and work my way up using and learning the necessary tools to complete it.For example, by working on this <!-- link goes here-->landing page, I learned about fluid containers and Responsive Website Designs.</p>
+								<p>I have excellent work ethics and I enjoy difficult challenges and learning from them. For example, this <!-- link goes here-->Simons game tested my JavaScript knowledge and my memory too 😃.</p>
 							</article>
 
 						<!-- About -->
