added github pages links in work section

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Most of my personal project always come from a problem I want to solve, and it is by solving that problem that I grow and develop my coding abilities.For example, I spotted a gap in the online presence of one of my local ISPs and I created a <!-- link goes here-->static website for the company.</p>
-								<p>I always break down the problem into smaller pieces and work my way up using and learning the necessary tools to complete it.For example, by working on this <!-- link goes here-->landing page, I learned about fluid containers and Responsive Website Designs.</p>
-								<p>I have excellent work ethics and I enjoy difficult challenges and learning from them. For example, this <!-- link goes here-->Simons game tested my JavaScript knowledge and my memory too 😃.</p>
+								<p>Most of my personal project always come from a problem I want to solve, and it is by solving that problem that I grow and develop my coding abilities.For example, I spotted a gap in the online presence of one of my local ISPs and I created a <a href="https://jomeista.github.io/streamwan/"> static website </a>for the company.</p>
+								<p>I always break down the problem into smaller pieces and work my way up using and learning the necessary tools to complete it.For example, by working on this <a href="https://jomeista.github.io/tingog/">landing page</a> I learned about fluid containers and Responsive Website Designs.</p>
+								<p>I have excellent work ethics and I enjoy difficult challenges and learning from them. For example, this <a href="https://jomeista.github.io/simon_game/">Simons game</a> tested my JavaScript knowledge and my memory too 😃.</p>
 							</article>
 
 						<!-- About -->
