modified About Me section

--- a/index.html
+++ b/index.html
@@ -63,9 +63,14 @@
 
 						<!-- About -->
 							<article id="about">
-								<h2 class="major">About</h2>
+								<h2 class="major">About Me</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<p>My interest in technology started when I got my first phone and learnt how to root and flash custom ROMs. I still remember swapping the internal storage on my Samsung Galaxy Grand Prime with a micro SD so I could play PES mobile.</p>
+								<p>In those days I started playing with CLI to run adb commands on my phone. I right away noticed the importance of having a backup of your files, because I ended up formatting my phone multiple times to perform clean ROM installation.</p>
+								<p>Fast forward some years, I chose to study Computer Science at University. I first became enthralled with programming in 2019 after taking a class in web development technologies.</p>
+								<p>At the height of the pandemic in 2020, learning institutions were closed indefinitely and suddenly I had more time. So, I started learning. I signed up for a web development bootcamp on Udemy and poured my heart and soul into it. After a few months of self-teaching, I knew this is what I wanted to do as a career.</p>
+								<p>Since the bootcamp, I have grown as a developer, taking a project from inception until its production.</p>
+								<p>I’m now seeking a full time role where I can contribute my skills to help a company achieve their goals.</p>
 							</article>
 
 						<!-- Contact -->
