--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; Joseph mugo || 0725071472 || jmugo16@gmail.com</p>
 					</footer>
 
 			</div>
